@@ -203,7 +203,8 @@ int check_sample(struct seeko *so, size_t i)
 	}
 	else
 	{
-		printf("sample %"SIZE_P" FAIL\n", (size_p)i);
+		if(channels == 1) printf("sample %"SIZE_P" FAIL (%i != %i)\n", (size_p)i, buf[0], so->left[i]);
+		else printf("sample %"SIZE_P" FAIL (%i != %i || %i != %i)\n", (size_p)i, buf[0], so->left[i], buf[1], so->right[i]);
 		return -1;
 	}
 	return 0;
